[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ipfs_huggingface_scraper_py"
version = "0.1.0"
authors = [
  { name="Benjamin Barber", email="starworks5@gmail.com" },
]
description = "A specialized module for scraping and processing model metadata from HuggingFace Hub with IPFS integration."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Operating System :: POSIX :: Linux",
]
[project.urls]
Homepage = "https://github.com/endomorphosis/ipfs_huggingface_scraper_py"
Issues = "https://github.com/endomorphosis/ipfs_huggingface_scraper_py/issues"